@@ -1,3 +1,9 @@
+2004-08-19  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): Inherit the icon from
+	* win/tkWinInt.h:                          the -parent window for
+	* win/tkWinWm.c (TkWinGetIcon):            the MessageBox.
+
 2004-08-19  Joe English  <jenglish@users.sourceforge.net>
 
 	* unix/tkUnixWm.c:  Cast argument 7 of XChangeProperty to
